fixed lang button overlapping english text, still overlaps rest of page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -277,7 +277,7 @@ img{
 
 .switch {
     position: relative;
-    display: inline-block;
+    display: inline;
     width: 60px;
     height: 34px;
 }
@@ -291,10 +291,10 @@ img{
 .slider {
     position: absolute;
     cursor: pointer;
-    top: 0;
+    top: -4px;
     left: 0;
-    right: 0;
-    bottom: 0;
+    right: -5px;
+    bottom: -6px;
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
@@ -306,7 +306,7 @@ img{
     height: 26px;
     width: 26px;
     left: 4px;
-    bottom: 4px;
+    bottom: 3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
